perf:调整部分结构

--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </form>
                     <div class="header-actions">
-                        <a href="https://github.com/你的用户名/项目名称" 
+                        <a href="https://github.com/yvyan/MyPage" 
                            target="_blank" 
                            class="github-link" 
                            title="查看源码">
