fix: 网站注入失败的问题

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="toast.css">
+    <script>
+        // 注入环境变量
+        window.API_BASE_URL = '{{ API_BASE_URL }}';
+    </script>
 </head>
 <body>
     <!-- Toast 容器 -->
